# wasm-micro-runtime

./: CMakeLists.txt  proposal_jit_canonical_abi.txt
core/iwasm/aot/: aot_loader.c
core/iwasm/common/: wasm_component.h  wasm_runtime_common.c  wasm_runtime_common.h
core/iwasm/compilation/: aot.c  aot.h  aot_compiler.c  aot_compiler.h  aot_component_canonical.c  aot_component_canonical.h  aot_component_types.h  aot_emit_function.c  aot_llvm.c  aot_llvm.h  aot_llvm_canonical.c  aot_llvm_canonical.h
core/iwasm/include/: wasm_component_loader.h
core/iwasm/interpreter/: iwasm_interp.cmake  wasm_component_canonical.c  wasm_component_canonical.h  wasm_component_loader.c  wasm_component_loader.h  wasm_component_runtime.c  wasm_component_runtime.h  wasm_loader.c
core/iwasm/libraries/lib-wasi-threads/: lib_wasi_threads_wrapper.c  tid_allocator.c
core/iwasm/libraries/libc-uvwasi/: libc_uvwasi_wrapper.c  wasi_async_defs.h
core/iwasm/libraries/libc-wasi/: libc_wasi_wrapper.c
core/iwasm/libraries/thread-mgr/: thread_manager.c
doc/: perf_tune.md
tests/unit/: CMakeLists.txt
tests/unit/component_model/: CMakeLists.txt  canonical_section_test.cc  component_alias_test.cc  component_lifting_lowering_test.cc  component_resource_test.cc  component_test_utils.h  component_thunk_execution_test.cc  core_instance_linking_test.cc  core_type_parsing_test.cc
tests/wamr-compiler/component/: primitive_types_comp.wat  simple_import_export_component.wat  string_list_placeholder_comp.wat  test_component_aot.py
wamr-compiler/: main.c
